seaqt/QtCore/gen_qsavefile.nim

import ./Qt5Core_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Core")  & " -fPIC"
{.compile("gen_qsavefile.cpp", cflags).}


import ./gen_qsavefile_types
export gen_qsavefile_types

import
  ./gen_qcoreevent_types,
  ./gen_qfiledevice,
  ./gen_qmetaobject_types,
  ./gen_qobject_types,
  ./gen_qobjectdefs_types
export
  gen_qcoreevent_types,
  gen_qfiledevice,
  gen_qmetaobject_types,
  gen_qobject_types,
  gen_qobjectdefs_types

type cQSaveFile*{.exportc: "QSaveFile", incompleteStruct.} = object

proc fcQSaveFile_new(name: struct_miqt_string): ptr cQSaveFile {.importc: "QSaveFile_new".}
proc fcQSaveFile_new2(): ptr cQSaveFile {.importc: "QSaveFile_new2".}
proc fcQSaveFile_new3(name: struct_miqt_string, parent: pointer): ptr cQSaveFile {.importc: "QSaveFile_new3".}
proc fcQSaveFile_new4(parent: pointer): ptr cQSaveFile {.importc: "QSaveFile_new4".}
proc fcQSaveFile_metaObject(self: pointer, ): pointer {.importc: "QSaveFile_metaObject".}
proc fcQSaveFile_metacast(self: pointer, param1: cstring): pointer {.importc: "QSaveFile_metacast".}
proc fcQSaveFile_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSaveFile_metacall".}
proc fcQSaveFile_tr(s: cstring): struct_miqt_string {.importc: "QSaveFile_tr".}
proc fcQSaveFile_trUtf8(s: cstring): struct_miqt_string {.importc: "QSaveFile_trUtf8".}
proc fcQSaveFile_fileName(self: pointer, ): struct_miqt_string {.importc: "QSaveFile_fileName".}
proc fcQSaveFile_setFileName(self: pointer, name: struct_miqt_string): void {.importc: "QSaveFile_setFileName".}
proc fcQSaveFile_open(self: pointer, flags: cint): bool {.importc: "QSaveFile_open".}
proc fcQSaveFile_commit(self: pointer, ): bool {.importc: "QSaveFile_commit".}
proc fcQSaveFile_cancelWriting(self: pointer, ): void {.importc: "QSaveFile_cancelWriting".}
proc fcQSaveFile_setDirectWriteFallback(self: pointer, enabled: bool): void {.importc: "QSaveFile_setDirectWriteFallback".}
proc fcQSaveFile_directWriteFallback(self: pointer, ): bool {.importc: "QSaveFile_directWriteFallback".}
proc fcQSaveFile_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSaveFile_tr2".}
proc fcQSaveFile_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSaveFile_tr3".}
proc fcQSaveFile_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSaveFile_trUtf82".}
proc fcQSaveFile_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSaveFile_trUtf83".}
proc fQSaveFile_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QSaveFile_virtualbase_metaObject".}
proc fcQSaveFile_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_metaObject".}
proc fQSaveFile_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QSaveFile_virtualbase_metacast".}
proc fcQSaveFile_override_virtual_metacast(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_metacast".}
proc fQSaveFile_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSaveFile_virtualbase_metacall".}
proc fcQSaveFile_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_metacall".}
proc fQSaveFile_virtualbase_fileName(self: pointer, ): struct_miqt_string{.importc: "QSaveFile_virtualbase_fileName".}
proc fcQSaveFile_override_virtual_fileName(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_fileName".}
proc fQSaveFile_virtualbase_open(self: pointer, flags: cint): bool{.importc: "QSaveFile_virtualbase_open".}
proc fcQSaveFile_override_virtual_open(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_open".}
proc fQSaveFile_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QSaveFile_virtualbase_writeData".}
proc fcQSaveFile_override_virtual_writeData(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_writeData".}
proc fQSaveFile_virtualbase_isSequential(self: pointer, ): bool{.importc: "QSaveFile_virtualbase_isSequential".}
proc fcQSaveFile_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_isSequential".}
proc fQSaveFile_virtualbase_pos(self: pointer, ): clonglong{.importc: "QSaveFile_virtualbase_pos".}
proc fcQSaveFile_override_virtual_pos(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_pos".}
proc fQSaveFile_virtualbase_seek(self: pointer, offset: clonglong): bool{.importc: "QSaveFile_virtualbase_seek".}
proc fcQSaveFile_override_virtual_seek(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_seek".}
proc fQSaveFile_virtualbase_atEnd(self: pointer, ): bool{.importc: "QSaveFile_virtualbase_atEnd".}
proc fcQSaveFile_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_atEnd".}
proc fQSaveFile_virtualbase_size(self: pointer, ): clonglong{.importc: "QSaveFile_virtualbase_size".}
proc fcQSaveFile_override_virtual_size(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_size".}
proc fQSaveFile_virtualbase_resize(self: pointer, sz: clonglong): bool{.importc: "QSaveFile_virtualbase_resize".}
proc fcQSaveFile_override_virtual_resize(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_resize".}
proc fQSaveFile_virtualbase_permissions(self: pointer, ): cint{.importc: "QSaveFile_virtualbase_permissions".}
proc fcQSaveFile_override_virtual_permissions(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_permissions".}
proc fQSaveFile_virtualbase_setPermissions(self: pointer, permissionSpec: cint): bool{.importc: "QSaveFile_virtualbase_setPermissions".}
proc fcQSaveFile_override_virtual_setPermissions(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_setPermissions".}
proc fQSaveFile_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QSaveFile_virtualbase_readData".}
proc fcQSaveFile_override_virtual_readData(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_readData".}
proc fQSaveFile_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QSaveFile_virtualbase_readLineData".}
proc fcQSaveFile_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_readLineData".}
proc fQSaveFile_virtualbase_reset(self: pointer, ): bool{.importc: "QSaveFile_virtualbase_reset".}
proc fcQSaveFile_override_virtual_reset(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_reset".}
proc fQSaveFile_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QSaveFile_virtualbase_bytesAvailable".}
proc fcQSaveFile_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_bytesAvailable".}
proc fQSaveFile_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QSaveFile_virtualbase_bytesToWrite".}
proc fcQSaveFile_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_bytesToWrite".}
proc fQSaveFile_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QSaveFile_virtualbase_canReadLine".}
proc fcQSaveFile_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_canReadLine".}
proc fQSaveFile_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QSaveFile_virtualbase_waitForReadyRead".}
proc fcQSaveFile_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_waitForReadyRead".}
proc fQSaveFile_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QSaveFile_virtualbase_waitForBytesWritten".}
proc fcQSaveFile_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_waitForBytesWritten".}
proc fQSaveFile_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSaveFile_virtualbase_event".}
proc fcQSaveFile_override_virtual_event(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_event".}
proc fQSaveFile_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSaveFile_virtualbase_eventFilter".}
proc fcQSaveFile_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_eventFilter".}
proc fQSaveFile_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSaveFile_virtualbase_timerEvent".}
proc fcQSaveFile_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_timerEvent".}
proc fQSaveFile_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSaveFile_virtualbase_childEvent".}
proc fcQSaveFile_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_childEvent".}
proc fQSaveFile_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSaveFile_virtualbase_customEvent".}
proc fcQSaveFile_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_customEvent".}
proc fQSaveFile_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSaveFile_virtualbase_connectNotify".}
proc fcQSaveFile_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_connectNotify".}
proc fQSaveFile_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSaveFile_virtualbase_disconnectNotify".}
proc fcQSaveFile_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSaveFile_override_virtual_disconnectNotify".}
proc fcQSaveFile_staticMetaObject(): pointer {.importc: "QSaveFile_staticMetaObject".}
proc fcQSaveFile_delete(self: pointer) {.importc: "QSaveFile_delete".}


func init*(T: type gen_qsavefile_types.QSaveFile, h: ptr cQSaveFile): gen_qsavefile_types.QSaveFile =
  T(h: h)
proc create*(T: type gen_qsavefile_types.QSaveFile, name: string): gen_qsavefile_types.QSaveFile =
  gen_qsavefile_types.QSaveFile.init(fcQSaveFile_new(struct_miqt_string(data: name, len: csize_t(len(name)))))

proc create*(T: type gen_qsavefile_types.QSaveFile, ): gen_qsavefile_types.QSaveFile =
  gen_qsavefile_types.QSaveFile.init(fcQSaveFile_new2())

proc create*(T: type gen_qsavefile_types.QSaveFile, name: string, parent: gen_qobject_types.QObject): gen_qsavefile_types.QSaveFile =
  gen_qsavefile_types.QSaveFile.init(fcQSaveFile_new3(struct_miqt_string(data: name, len: csize_t(len(name))), parent.h))

proc create*(T: type gen_qsavefile_types.QSaveFile, parent: gen_qobject_types.QObject): gen_qsavefile_types.QSaveFile =
  gen_qsavefile_types.QSaveFile.init(fcQSaveFile_new4(parent.h))

proc metaObject*(self: gen_qsavefile_types.QSaveFile, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQSaveFile_metaObject(self.h))

proc metacast*(self: gen_qsavefile_types.QSaveFile, param1: cstring): pointer =
  fcQSaveFile_metacast(self.h, param1)

proc metacall*(self: gen_qsavefile_types.QSaveFile, param1: cint, param2: cint, param3: pointer): cint =
  fcQSaveFile_metacall(self.h, cint(param1), param2, param3)
